Version 1.0.0 saw a major overhaul of Flask-Restless to make it compliant with
JSON API, so changes from prior versions may not be relevant to more recent
versions.

Numbers following a pound sign (#) refer to `GitHub issues`_.

.. _GitHub issues: https://github.com/jfinkels/flask-restless/issues

Version 1.0.0-dev
-----------------

Not yet released.

- #363 (partial solution): don't use ``COUNT`` on requests that don't require
  pagination.
- #404: **Major overhaul of Flask-Restless to support JSON API**.
- Increases minimum version requirement for ``python-dateutil`` to be strictly
  greater than 2.2 to avoid parsing bug.
- #331, #415: documents the importance of URL encoding when using the ``like``
  operator to filter results.
- #376: add a ``not_like`` operator for filter objects.
- #431: adds a ``url_prefix`` keyword argument to the :class:`APIManager`
  constructor, so one can specify a URL prefix once for all created APIs.
- #449: roll back the session on any SQLAlchemy error, not just a few.
- #436, #453: use ``__table__.name`` instead of ``__tablename__`` to infer the
  collection name for the SQLAlchemy model.
- #440, #475: uses the serialization function provided at the time of invoking
  :meth:`APIManager.create_api` to serialize each resource correctly, depending
  on its type.
- #474: include license files in built wheel for distribution.

Older versions
--------------

.. note::

   As of version 0.13.0, Flask-Restless supports Python 2.6, 2.7, and 3. Before
   that, it supported Python 2.5, 2.6, and 2.7.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.17.0
~~~~~~~~~~~~~~

Released on February 17, 2015.

- Corrects bug to allow delayed initialization of multiple Flask applications.
- #167: allows custom serialization/deserialization functions.
- #198: allows arbitrary Boolean expressions in search query filters.